--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
@@ -41,6 +41,8 @@ ibm_kmodel:
   mas_aibroker_connector_tag: "{{ MAS_AIBROKER_CONNECTOR_TAG }}"
 
   mas_aibroker_saas: "{{ MAS_AIBROKER_SAAS }}"
-  
+  ##review
+  mas_app_channel: "{{ MAS_APP_CHANNEL }}"
+  ##review
   model_id_unique_length: "{{ MODEL_ID_UNIQUE_LENGTH }}"
   model_id_prefix: "{{ MODEL_ID_PREFIX }}"
