--- a/tekton/src/tasks/gitops/gitops-odh.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-odh.yml.j2
@@ -36,6 +36,8 @@ spec:
       type: string
     - name: opendatahub_namespace
       type: string
+    - name: odh_operator_version
+      type: string
   stepTemplate:
     name: gitops-odh
     env:
@@ -71,6 +73,8 @@ spec:
         value: $(params.opendatahub_operator_group)
       - name: ODH_NAMESPACE
         value: $(params.opendatahub_namespace)
+      - name: odh_operator_version
+        value: $(params.odh_operator_version)
     envFrom:
       - configMapRef:
           name: environment-properties
