mas_icr_cp added

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
@@ -46,3 +46,5 @@ ibm_kmodel:
   ##review
   model_id_unique_length: "{{ MODEL_ID_UNIQUE_LENGTH }}"
   model_id_prefix: "{{ MODEL_ID_PREFIX }}"
+
+  mas_icr_cp: "{{ MAS_ICR_CP }}"
