--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-odh-install.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-mas-odh-install.yaml.j2
@@ -50,7 +50,7 @@ ibm_odh:
   mas_aibroker_storage_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MINIO_HOST }}>"
   mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MINIO_PORT }}>"
   mas_aibroker_storage_ssl: {{ MAS_AIBROKER_STORAGE_SSL }}
-  mas_aibroker_storage_region: {{ MAS_AIBROKER_STORAGE_REGION }}
+  mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
   mas_aibroker_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SM_MINIO_BUCKET_DEFAULT }}>"
 
   # MariaDB configuration
