--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
@@ -6,9 +6,8 @@ ibm_aibroker:
   mas_aibroker_watsonx_secret: "{{ MAS_AIBROKER_WATSONX_SECRET }}"
   ibm_entitlement_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_IBM_ENTITLEMENT }}>"
 
- #minio......
   mas_aibroker_storage_provider: "{{ MAS_AIBROKER_STORAGE_PROVIDER }}"
-  mas_aibroker_storage_ssl: "{{ MAS_AIBROKER_STORAGE_SSL }}"  #mas_aibroker_minio_secret: "minio-secret"
+  mas_aibroker_storage_ssl: "{{ MAS_AIBROKER_STORAGE_SSL }}"
   mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
   mas_aibroker_minio_secret: "{{ MAS_AIBROKER_MINIO_SECRET }}"
 
