--- a/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
@@ -32,6 +32,8 @@ spec:
       type: string
     - name: tenantNamespace
       type: string
+    - name: tenant_id
+      type: string
     - name: cluster_domain
       type: string
     - name: in_saas_env
@@ -146,7 +148,9 @@ spec:
 
       - name: TENANT_NAMESPACE
         value: $(params.tenantNamespace)
-
+      - name: TENANT_ID
+        value: $(params.tenant_id)
+        
       - name: CLUSTER_DOMAIN
         value: $(params.cluster_domain)
 
