mas-aibroker-storage-ssl , image validation for cli

--- a/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
@@ -279,7 +279,9 @@ spec:
           value: $(params.opendatahub_namespace)
         - name: odh_operator_version
           value: $(params.odh_operator_version)
-
+        - name: mas_aibroker_storage_ssl
+          value: $(params.mas_aibroker_storage_ssl)
+          
     # 3.gitops-Aibroker
     # -------------------------------------------------------------------------
 
