--- a/tekton/src/tasks/gitops/gitops-odh.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-odh.yml.j2
@@ -38,6 +38,9 @@ spec:
       type: string
     - name: odh_operator_version
       type: string
+    - name: mas_aibroker_storage_ssl
+      type: string
+      default: "true"
   stepTemplate:
     name: gitops-odh
     env:
@@ -73,8 +76,10 @@ spec:
         value: $(params.opendatahub_operator_group)
       - name: ODH_NAMESPACE
         value: $(params.opendatahub_namespace)
-      - name: odh_operator_version
+      - name: ODH_OPERATOR_VERSION
         value: $(params.odh_operator_version)
+      - name: MAS_AIBROKER_STORAGE_SSL
+        value: $(params.mas_aibroker_storage_ssl)
     envFrom:
       - configMapRef:
           name: environment-properties
