drocfg_ca_tenant added

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
@@ -39,8 +39,7 @@ ibm_aibroker:
   drocfg_ca: "<path:{{ SECRETS_PATH }}:{{ DROCFG_CA }}>"
   drocfg_registration_key: "<path:{{ SECRETS_PATH }}:{{ DROCFG_REGISTRATION_KEY }}>"
   drocfg_url: "<path:{{ SECRETS_PATH }}:{{ DROCFG_URL }}>"
-
-
+  drocfg_ca_tenant: "<path:{{ SECRETS_PATH }}:{{ DROCFG_TENANT }}>"
 
   ##review
   environment_type: "{{ ENVIRONMENT_TYPE }}"
