--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
@@ -21,6 +21,7 @@ ibm_aibroker_tenant:
   drocfg_registration_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_DROCFG_REGISTRATION_KEY }}>"
 
   # sls
+  slscfg_ca_tenant: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SLSCFG_CA_TENANT }}>"
   slscfg_url: "{{ SLSCFG_URL }}"
   slscfg_registration_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SLSCFG_REGISTRATION_KEY }}>"
   mas_aibroker_sls_subscription_id: "{{ MAS_AIBROKER_SLS_SUBSCRIPTION_ID }}"
@@ -38,12 +39,12 @@ ibm_aibroker_tenant:
   mas_aibroker_watsonxai_apikey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_WATSONXAI_APIKEY }}>"
 
   # minio
-  mas_aibroker_storage_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_MINIO_HOST }}>"
-  mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_MINIO_PORT }}>"
+  mas_aibroker_storage_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_HOST }}>"
+  mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_PORT }}>"
   mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
-  mas_aibroker_storage_accesskey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_MINIO_ACCESSKEY }}>"
-  mas_aibroker_storage_secretkey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_MINIO_SECRETKEY }}>"
-  mas_aibroker_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_MINIO_BUCKET }}>"
+  mas_aibroker_storage_accesskey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_ACCESSKEY }}>"
+  mas_aibroker_storage_secretkey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_SECRETKEY }}>"
+  mas_aibroker_storage_pipelines_bucket: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_BUCKET }}>"
   mas_aibroker_storage_ssl: "{{ MAS_AIBROKER_STORAGE_SSL }}"
 
 
