--- a/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
@@ -491,3 +491,5 @@ spec:
           value: $(params.model_id_prefix)
         - name: mas_app_channel
           value: $(params.mas_app_channel)
+        - name: mas_icr_cp
+          value: $(params.mas_icr_cp)
