--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
@@ -27,11 +27,10 @@ ibm_aibroker_tenant:
   slscfg_registration_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_SLSCFG_REGISTRATION_KEY }}>"
   mas_aibroker_sls_subscription_id: "{{ MAS_AIBROKER_SLS_SUBSCRIPTION_ID }}"
   
-  # RSL ##review
   rsl_url: "{{ RSL_URL }}"
   rsl_org_id: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_RSL_ORG_ID }}>"
   rsl_token: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_RSL_TOKEN }}>"
-  ##review
+  
 
   
   # watsonx
@@ -48,7 +47,7 @@ ibm_aibroker_tenant:
   mas_aibroker_storage_ssl: "{{ MAS_AIBROKER_STORAGE_SSL }}"
 
 
-  #tenant ##review
+  #tenant 
   # S3
   mas_aibroker_storage_provider: "{{ MAS_AIBROKER_STORAGE_PROVIDER }}"
   mas_aibroker_s3_endpoint_url: "{{ MAS_AIBROKER_S3_ENDPOINT_URL }}"
@@ -58,4 +57,4 @@ ibm_aibroker_tenant:
   tenant_entitlement_type: "{{ TENANT_ENTITLEMENT_TYPE }}"
   tenant_entitlement_start_date: "{{ TENANT_ENTITLEMENT_START_DATE }}"
   tenant_entitlement_end_date: "{{ TENANT_ENTITLEMENT_END_DATE }}"
-  ##review
+  
