--- a/tekton/src/tasks/gitops/gitops-kmodel.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-kmodel.yml.j2
@@ -39,10 +39,10 @@ spec:
       type: string
     - name: mas_aibroker_storage_ssl
       type: string
-    - name: mas_aibroker_storage_accesskey
-      type: string
-    - name: mas_aibroker_storage_secretkey
-      type: string
+    #- name: mas_aibroker_storage_accesskey
+    #  type: string
+    # - name: mas_aibroker_storage_secretkey
+    #   type: string
     - name: mas_aibroker_storage_host
       type: string
     - name: mas_aibroker_storage_port
@@ -121,10 +121,10 @@ spec:
         value: $(params.mas_aibroker_storage_provider)
       - name: MAS_AIBROKER_STORAGE_SSL
         value: $(params.mas_aibroker_storage_ssl)
-      - name: MAS_AIBROKER_STORAGE_ACCESSKEY
-        value: $(params.mas_aibroker_storage_accesskey)
-      - name: MAS_AIBROKER_STORAGE_SECRETKEY
-        value: $(params.mas_aibroker_storage_secretkey)
+      # - name: MAS_AIBROKER_STORAGE_ACCESSKEY
+      #   value: $(params.mas_aibroker_storage_accesskey)
+      # - name: MAS_AIBROKER_STORAGE_SECRETKEY
+      #   value: $(params.mas_aibroker_storage_secretkey)
       - name: MAS_AIBROKER_STORAGE_HOST
         value: $(params.mas_aibroker_storage_host)
       - name: MAS_AIBROKER_STORAGE_PORT
