--- a/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-aibroker.yml.j2
@@ -230,10 +230,10 @@ spec:
         - name: mas_instance_id
           value: $(params.mas_instance_id)
 
-      # when:
-      #  - input: "$(params.mas_aibroker_storage_provider)"
-      #    operator: in
-      #    values: ["minio"]
+      when:
+        - input: "$(params.mas_aibroker_storage_provider)"
+          operator: in
+          values: ["minio"]
 
     # 2.gitops-odh
     # -------------------------------------------------------------------------
