cis related changes

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
@@ -8,7 +8,7 @@ ibm_aibroker_tenant:
   mas_aibroker_provision_tenant: "{{ MAS_AIBROKER_PROVISION_TENANT }}"
   mas_instance_id: "{{ MAS_INSTANCE_ID }}"
   tenantNamespace: "{{ TENANT_NAMESPACE }}"
-  cluster_domain: "{{ CLUSTER_DOMAIN }}"
+  # cluster_domain: "{{ CLUSTER_DOMAIN }}"
   in_saas_env: "{{ IN_SAAS_ENV }}"
   ibm_entitlement_key: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_IBM_ENTITLEMENT }}>"
 
