replace mas_instance_id with aibroker_instance_id

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant-base.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant-base.yaml.j2
@@ -1,4 +1,4 @@
-merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ MAS_INSTANCE_ID }}/{{ TENANT_ID }}"
+merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AIBROKER_INSTANCE_ID }}/{{ TENANT_ID }}"
 
 account:
   id: {{ ACCOUNT_ID }}
@@ -11,7 +11,7 @@ cluster:
   url: {{ CLUSTER_URL }}
 
 instance:
-  id: {{ MAS_INSTANCE_ID }}
+  id: {{ AIBROKER_INSTANCE_ID }}
 
 tenant:
   id: {{ TENANT_ID }}
