--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
@@ -1,4 +1,4 @@
-merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ MAS_INSTANCE_ID }}/{{ TENANT_ID }}"
+merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AIBROKER_INSTANCE_ID }}/{{ TENANT_ID }}"
 
 ibm_aibroker_tenant:
   # aibroker
@@ -6,7 +6,7 @@ ibm_aibroker_tenant:
   mas_aibroker_tenant_name: "{{ MAS_AIBROKER_TENANT_NAME }}"
   aibroker_namespace: "{{ AIBROKER_NAMESPACE }}"
   mas_aibroker_provision_tenant: "{{ MAS_AIBROKER_PROVISION_TENANT }}"
-  mas_instance_id: "{{ MAS_INSTANCE_ID }}"
+  aibroker_instance_id: "{{ AIBROKER_INSTANCE_ID }}"
   tenantNamespace: "{{ TENANT_NAMESPACE }}"
   # cluster_domain: "{{ CLUSTER_DOMAIN }}"
   in_saas_env: "{{ IN_SAAS_ENV }}"
