--- a/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-aibroker-tenant.yml.j2
@@ -27,7 +27,7 @@ spec:
       type: string
     - name: mas_aibroker_provision_tenant
       type: string
-    - name: mas_instance_id
+    - name: aibroker_instance_id
       type: string
     - name: tenantNamespace
       type: string
@@ -124,8 +124,8 @@ spec:
         value: $(params.aibroker_namespace)
       - name: MAS_AIBROKER_PROVISION_TENANT
         value: $(params.mas_aibroker_provision_tenant)
-      - name: MAS_INSTANCE_ID
-        value: $(params.mas_instance_id)
+      - name: AIBROKER_INSTANCE_ID
+        value: $(params.aibroker_instance_id)
       - name: TENANT_NAMESPACE
         value: $(params.tenantNamespace)
       - name: TENANT_ID
