--- a/tekton/src/tasks/gitops/gitops-aibroker.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-aibroker.yml.j2
@@ -24,7 +24,7 @@ spec:
       type: string
     - name: github_host
       type: string
-    - name: mas_instance_id
+    - name: aibroker_instance_id
       type: string
     - name: aibroker_namespace
       type: string
@@ -138,8 +138,8 @@ spec:
         value: $(params.github_host)
       - name: GITHUB_REPO
         value: $(params.github_repo)
-      - name: MAS_INSTANCE_ID
-        value: $(params.mas_instance_id)
+      - name: AIBROKER_INSTANCE_ID
+        value: $(params.aibroker_instance_id)
       - name: AIBROKER_NAMESPACE
         value: $(params.aibroker_namespace)
       - name: MAS_AIBROKER_WATSONX_SECRET
