--- a/tekton/src/tasks/gitops/gitops-kmodel.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-kmodel.yml.j2
@@ -27,7 +27,7 @@ spec:
     - name: github_host
       type: string
 
-    - name: mas_instance_id
+    - name: aibroker_instance_id
       type: string
     - name: aibroker_internal_tls
       type: string
@@ -108,9 +108,8 @@ spec:
         value: $(params.github_host)
       - name: GITHUB_REPO
         value: $(params.github_repo)
-
-      - name: MAS_INSTANCE_ID
-        value: $(params.mas_instance_id)
+      - name: AIBROKER_INSTANCE_ID
+        value: $(params.aibroker_instance_id)
       - name: AIBROKER_INTERNAL_TLS
         value: $(params.aibroker_internal_tls)
       - name: AIBROKER_NAMESPACE
@@ -161,7 +160,6 @@ spec:
         value: $(params.model_id_unique_length)
       - name: MODEL_ID_PREFIX
         value: $(params.model_id_prefix)
-      
       - name: MAS_APP_CHANNEL
         value: $(params.mas_app_channel)
       - name: MAS_ICR_CP
