--- a/tekton/src/tasks/gitops/gitops-minio.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-minio.yml.j2
@@ -9,7 +9,7 @@ spec:
       type: string
     - name: account
       type: string
-    - name: mas_instance_id
+    - name: aibroker_instance_id
       type: string
     - name: cluster_id
       type: string
@@ -53,8 +53,8 @@ spec:
         value: $(params.cluster_name)
       - name: ACCOUNT
         value: $(params.account)
-      - name: MAS_INSTANCE_ID
-        value: $(params.mas_instance_id)
+      - name: AIBROKER_INSTANCE_ID
+        value: $(params.aibroker_instance_id)
       #- name: CLUSTER_ID
       #  value: $(params.cluster_id)
       - name: CLUSTER_URL
