--- a/tekton/src/tasks/gitops/gitops-odh.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-odh.yml.j2
@@ -8,7 +8,7 @@ spec:
       type: string
     - name: account
       type: string
-    - name: mas_instance_id
+    - name: aibroker_instance_id
       type: string
     - name: cluster_url
       type: string
@@ -48,8 +48,8 @@ spec:
         value: $(params.cluster_name)
       - name: ACCOUNT
         value: $(params.account)
-      - name: MAS_INSTANCE_ID
-        value: $(params.mas_instance_id)
+      - name: AIBROKER_INSTANCE_ID
+        value: $(params.aibroker_instance_id)
       - name: CLUSTER_URL
         value: $(params.cluster_url)
       - name: GITHUB_REPO
