replaced route_type with is_external_route

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker.yaml.j2
@@ -75,3 +75,4 @@ ibm_aibroker:
 
   cluster_domain: "{{ CLUSTER_DOMAIN }}"
   in_saas_env: "{{ IN_SAAS_ENV }}"
+  is_external_route: "{{ IS_EXTERNAL_ROUTE }}"
