--- a/tekton/src/tasks/gitops/gitops-minio.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-minio.yml.j2
@@ -45,6 +45,8 @@ spec:
     - name: minio_image
       type: string
       default: quay.io/minio/minio:latest
+    - name: mas_aibroker_storage_provider
+      type: string
   stepTemplate:
     name: gitops-minio
     env:
