--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-minio.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-minio.yaml.j2
@@ -1,6 +1,7 @@
 merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AIBROKER_INSTANCE_ID }}"
 
 ibm_minio:
+{% if MAS_AIBROKER_STORAGE_PROVIDER is defined and MAS_AIBROKER_STORAGE_PROVIDER == 'minio' %}
   minio_namespace: "{{ MINIO_NAMESPACE }}"
   minio_instance_name: "{{ MINIO_INSTANCE_NAME }}"
   minio_root_user: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_USER }}>"
@@ -8,3 +9,4 @@ ibm_minio:
   minio_storage_class: "{{ MINIO_STORAGE_CLASS }}"
   minio_storage_size: "{{ MINIO_STORAGE_SIZE }}"
   minio_image: "{{ MINIO_IMAGE }}"
+{% endif %}
