--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aibroker-tenant.yaml.j2
@@ -37,7 +37,7 @@ ibm_aibroker_tenant:
   mas_aibroker_watsonxai_project_id: "<path:{{ SECRETS_PATH }}:{{ MAS_AIBROKER_WATSONXAI_PROJECT_ID }}>"
   mas_aibroker_watsonxai_apikey: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_WATSONXAI_APIKEY }}>"
 
-  # minio
+  # storage
   mas_aibroker_storage_host: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_HOST }}>"
   mas_aibroker_storage_port: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_STORAGE_PORT }}>"
   mas_aibroker_storage_region: "{{ MAS_AIBROKER_STORAGE_REGION }}"
