--- a/tekton/src/tasks/gitops/gitops-deprovision-aibroker-tenant.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-deprovision-aibroker-tenant.yml.j2
@@ -49,7 +49,7 @@ spec:
         value: $(params.github_host)
       - name: GITHUB_REPO
         value: $(params.github_repo)
-      - name: aibroker_instance_id
+      - name: AIBROKER_INSTANCE_ID
         value: $(params.aibroker_instance_id)
       - name: TENANT_ID
         value: $(params.tenant_id)
