--- a/tekton/src/tasks/gitops/gitops-deprovision-odh.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-deprovision-odh.yml.j2
@@ -52,7 +52,7 @@ spec:
         value: $(params.github_host)
       - name: GITHUB_REPO
         value: $(params.github_repo)
-      - name: aibroker_instance_id
+      - name: AIBROKER_INSTANCE_ID
         value: $(params.aibroker_instance_id)
         
 
