--- a/tekton/src/pipelines/gitops/deprovision-mas-aibroker-tenant.yml.j2
+++ b/tekton/src/pipelines/gitops/deprovision-mas-aibroker-tenant.yml.j2
@@ -29,11 +29,11 @@ spec:
       type: string
     - name: github_host
       type: string
-
+  workspaces:
+    - name: configs
   tasks:
     - name: run-gitops-deprovision-aibroker-tenant
       taskRef:
-        kind: Task
         name: gitops-deprovision-aibroker-tenant
       workspaces:
         - name: configs
